# graph3

./: .gitignore  CMakeLists.txt  FindGLM.cmake  FindLibPNG++.cmake  LICENSE  README  graph3.desktop.in  graph3.rc.in  makefile  window.cpp  x-graph3.xml
examples/: blob.gra  cross_capped_disk.gra  intersecting_disc.gra  klein_bagel.gra  klein_bottle.gra  mobius.gra  ripple.gra  roman_surface.gra  sphere.gra  torus.gra
examples/batman/: batman-1.gra  batman-2.gra  batman-3.gra  batman-4.gra
shaders/: color.frag  common.frag  flat_color.frag  graph.vert  line.vert  tex.frag
src/: SFML_widget.cpp  SFML_widget.h  camera.h  camera.hpp  color.frag  config.cpp  config.hpp.in  flat_color.frag  gl_helpers.cpp  gl_helpers.hpp  graph.cpp  graph.frag  graph.h  graph.hpp  graph.vert  graph_cartesian.cpp  graph_cartesian.h  graph_cartesian.hpp  graph_cylindrical.cpp  graph_cylindrical.h  graph_cylindrical.hpp  graph_disp.cpp  graph_disp.h  graph_disp.hpp  graph_disp_draw.cpp  graph_disp_input.cpp  graph_page.cpp  graph_page.hpp  graph_page_color_tex.cpp  graph_page_file_io.cpp  graph_parametric.cpp  graph_parametric.hpp  graph_spherical.cpp  graph_spherical.h  graph_spherical.hpp  graph_test.cpp  graph_util.cpp  graph_window.cpp  graph_window.h  graph_window.hpp  (+16 more)
src/SFMLWidget/: SFMLWidget.cpp  SFMLWidget.h  SFMLWidget.hpp
